# create_python_project

./: .augmentignore  .dmypy.json  .env.example  .env.template  .flake8  .gitignore  .isort.cfg  .post-commit-config.yaml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Proj_Setup.md  README.md  Updated Project Chat Log - Create Python Project  aboutthisfolder.md  create_python_project.code-workspace  package-lock.json  package.json  pyproject.toml  test_all_providers.py  test_anthropic_api.py  test_change_detection.txt  test_json_parsing.py
.claude/: .doc_history  aboutthisfolder.md
.config/: .doc_history  .flake8  .isort.cfg  aboutthisfolder.md  mypy.ini  pylintrc  ruff.toml
.github/: .doc_history  GITHUB_SETUP.md  aboutthisfolder.md  copilot-instructions.md
.github/instructions/: cli.instructions.md  python_style.instructions.md  testing.instructions.md
.github/prompts/: add_feature.prompt.md  code_review.prompt.md  generate_tests.prompt.md
TaskMaster/: README.md
TaskMasterTasks/scripts/: prd.txt  task-complexity-report.json
ai-docs/: .doc_history  .hidden_test_file.md  LatestPythonRun.md  README.md  aboutthisfolder.md  api_documentation.md  convo.md  current-info.txt  errors.txt  final_test.md  git_workflow.md  handover.md  openaianalysis.md  sensitive_check_results.txt  test_change_detection.md  updated_files.txt
ai-docs/.hidden_folder/: nested_file.md
ai-docs/Refactoring1/: complete-enhancement-guide.md  dynamic-project-fixes.py  enhancement-solutions.py  refactored-project-templates.py  refactoring-file-tree-plan.md  saas-project-simulation.md
ai-docs/api/: project_structure.md
ai-docs/development/: ai_response_examples.md  errors.txt  output.txt
ai-docs/mcp-explainers/: README.md  brave-search.md  brightdata.md  context7.md  filesystem.md  github-copilot.md  github-versioning.md  memory.md  perplexity.md  pexels.md  promptboost.md  task_master_tools_guide.md
ai-docs/security/: .deep_test.md  README.md  VSCODE_SECURITY.md  aboutthisfolder.md  test_subfolder_change.md
ai-docs/setup/: MCP_ENV_SETUP.md  MCP_SETUP.md  README.md  mcp-setup-guide.md
ai-docs/templates/: handysuggestions.txt  prd_personas_and_questions.xml
ai-docs/workflows/: README.md
create_python_project/: __init__.py  create_python_project.py
create_python_project/utils/: __init__.py  ai_prompts.py  logging.py  notifications.py
docs/: .doc_history  MCP_SETUP.md  Some text.md  aboutthisfolder.md  errors.txt  logs.md
imagesandvids/: .doc_history  README.md  aboutthisfolder.md  combat_fighter_jet_attribution.md  dublin_photos_attribution.md  skateboarder_one_attribution.md
logs/: aboutthisfolder.md
scripts/: .doc_history  aboutthisfolder.md  ai_commit_workflow.sh  check_ai_services.sh  check_gitlab_connection.sh  check_perplexity_config.sh  clean_run.py  commit_with_docs.sh  commit_with_docs_fix.sh  create_gitlab_branch.sh  deepseek_commit_message.py  errors.txt  fix_lint_issues.py  fix_lint_issues.sh  fix_pylint_issues.sh  fix_specific_lint_issues.py  force_push_to_remotes.sh  git-push-all.sh  github_mcp_fix_summary.sh  lint_all.py  lint_src.py  manage_docs.sh  manage_logs.sh  post_commit_push.sh  remove_large_file.sh  remove_sensitive_file.sh  run_app.sh  run_mypy.sh  run_perplexity_mcp.sh  setup_env_template.sh  setup_mcp.sh  test_new_file.sh  test_push.md  truncate_md_files.sh  update_documentation.sh  update_perplexity_mcp.sh  verify_security.sh
scripts/docs/: .doc_history  aboutthisfolder.md  setup_doc_watcher.sh
scripts/git/: .doc_history  (+4 more)
sketches/: aboutthisfolder.md
src/: .doc_history  aboutthisfolder.md  test_cursor_rules.py
test_docs/: .doc_history  aboutthisfolder.md
tests/: .doc_history  __init__.py  aboutthisfolder.md  conftest.py  test_ai_integration.py  test_ai_prompts.py  test_cli.py  test_config.py  test_core_project_builder.py  test_create_python_project.py  test_development_tools.py  test_logging.py  test_script_templates.py  test_templates.py  test_workspace_config.py
(+67 files in other folders)
